--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ GamePrototype.xcodeproj/project.xcworkspace/xcuserdata/arthur.hvoliveira.xcuserd
 GamePrototype.xcodeproj/project.xcworkspace/xcuserdata/luiz.fsilva.xcuserdatad/UserInterfaceState.xcuserstate
 
 GamePrototype.xcodeproj/project.xcworkspace/xcuserdata/filipe.kunioshi.xcuserdatad/UserInterfaceState.xcuserstate
+
+GamePrototype.xcodeproj/project.xcworkspace/xcuserdata/luizfernandosilva.xcuserdatad/UserInterfaceState.xcuserstate
