--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ GamePrototype.xcodeproj/project.xcworkspace/xcuserdata/luiz.fsilva.xcuserdatad/U
 GamePrototype.xcodeproj/project.xcworkspace/xcuserdata/filipe.kunioshi.xcuserdatad/UserInterfaceState.xcuserstate
 
 GamePrototype.xcodeproj/project.xcworkspace/xcuserdata/luizfernandosilva.xcuserdatad/UserInterfaceState.xcuserstate
+GamePrototype.xccheckout
