Renomeando projeto para Dragon's Rage

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@ GamePrototype.xcodeproj/project.xcworkspace/xcuserdata/filipe.kunioshi.xcuserdat
 
 GamePrototype.xcodeproj/project.xcworkspace/xcuserdata/luizfernandosilva.xcuserdatad/UserInterfaceState.xcuserstate
 GamePrototype.xccheckout
+UserInterfaceState.xcuserstate
+Dragon's Rage.xccheckout
+Dragon's Rage.xcodeproj/project.xcworkspace/xcuserdata
+Dragon's Rage.xcodeproj/xcuserdata
