--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ UserInterfaceState.xcuserstate
 Dragon's Rage.xccheckout
 Dragon's Rage.xcodeproj/project.xcworkspace/xcuserdata
 Dragon's Rage.xcodeproj/xcuserdata
+contents.xcworkspacedata
